@@ -289,6 +289,9 @@ repl call, 0x4E67f4,	0x0,		0x0,		"City_shows_harbor_icon",			""
 define,	   0x4ADF90,	0x0,		0x0,		"City_can_trade_via_air",			"byte (__fastcall *) (City * this)"
 repl call, 0x4E6842,	0x0,		0x0,		"City_shows_airport_icon",			""
 define,	   0x4B1F90,	0x0,		0x0,		"City_count_improvements_with_flag",		"int (__fastcall *) (City * this, int edx, enum ImprovementTypeFlags flag)"
+repl call, 0x4A144C,	0x0,		0x0,		"Unit_is_king_for_defense_priority_1",		""
+repl call, 0x4A1477,	0x0,		0x0,		"Unit_is_king_for_defense_priority_2",		""
+repl call, 0x4A149F,	0x0,		0x0,		"Unit_is_king_for_defense_priority_3",		""
 
 ignore,	   0x4507B0,	0x452860,	0x0,		"Unit_ai_move_offensive_unit",			"void (__fastcall *) (Unit * this)"
 ignore,    0x44C340,	0x0,		0x0,		"Unit_ai_eval_bombard_target",			"int (__fastcall *) (Unit * this, int edx, int tile_x, int tile_y, int param_3)"
