@@ -250,3 +250,7 @@ ptw_like_artillery_targeting = []
 ; Changes the meaning of the charm attack flag to indicate PTW-like targeting. This is a matter of convenience. It allows modders to specify PTW
 ; targeting using an editor, instead of the list above, at the cost of losing the charm attack function.
 charm_flag_triggers_ptw_like_targeting = false
+
+; Units with the king ability will defend like normal, instead of always being the last to defend in a stack. Useful for mods that use the king flag
+; for special purposes. Does not apply in regicide games.
+ignore_king_ability_for_defense_priority = false
